Problem-1 : Refactoring